button not showing fix

--- a/src/components/contact/_Contact.scss
+++ b/src/components/contact/_Contact.scss
@@ -4,7 +4,7 @@
   width: 100%;
   max-width: 100%;
   background-color: #2a3342;
-  padding-bottom: 80px;
+  padding-bottom: 130px;
   &__buildings {
     display: flex;
     max-width: 100%;
@@ -21,7 +21,7 @@
     position: relative;
     margin: 0 auto;
     max-width: 1000px;
-    padding: 0px clamp(50px, 7vw, 70px) 150px clamp(50px, 7vw, 70px);
+    padding: 0px clamp(50px, 7vw, 70px);
     &__heading {
       display: flex;
       justify-content: center;
